# btcx_tools

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build-release.sh  notes.md  paths.txt  quotes.txt
.github/: dependabot.yml
.github/workflows/: renovate.yml
api/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
api/src/: main.rs
scripts/: README.md  addresses.txt  mnemonic.txt  notes.txt
scripts/blockstream_info/: Cargo.toml
scripts/blockstream_info/src/: main.rs
scripts/blockstream_tx/: Cargo.toml
scripts/blockstream_tx/src/: main.rs
scripts/brain_wallet/: Cargo.toml
scripts/brain_wallet/src/: main.rs
scripts/broadcast_tx/: Cargo.toml
scripts/broadcast_tx/src/: main.rs
scripts/create_tx/: Cargo.toml
scripts/create_tx/src/: main.rs
scripts/dev/: setup.sh
scripts/estimate_fee/: Cargo.toml
scripts/estimate_fee/src/: main.rs
scripts/fetch_utxos/: Cargo.toml
scripts/fetch_utxos/src/: main.rs
scripts/generate_addresses/: Cargo.toml
scripts/generate_addresses/src/: main.rs
scripts/generate_mnemonic/: Cargo.toml
scripts/generate_mnemonic/src/: main.rs
scripts/sign_tx/: Cargo.toml
scripts/sign_tx/src/: main.rs
src/lib/: Cargo.toml  error.rs  lib.rs  transaction_builder.rs  types.rs
