[workspace]
members = [
    "api",
    "scripts/blockstream_info",
    "scripts/blockstream_tx",
    "scripts/brain_wallet",
    "scripts/broadcast_tx",
    "scripts/create_tx",
    "scripts/estimate_fee",
    "scripts/fetch_utxos",
    "scripts/generate_addresses",
    "scripts/generate_mnemonic",
    "scripts/sign_tx",
    "src/lib",
]
resolver = "1"

[profile.release]
lto = true
codegen-units = 1
